8357445: G1: run idle time-based heap uncommit at a safepoint and rework its tests
The shipped idle time-based heap uncommit ran the shrink on the WatcherThread
via a PeriodicTask, mutating the G1 master free region list off-safepoint. That
tripped the master-free-list MT-safety guarantee and crashed under concurrent
allocation. This change makes the uncommit run at a safepoint and reworks the
JTReg coverage so the behavior is actually tested.

Runtime:
- Drive the shrink through VM_G1ShrinkHeap so free-region uncommit happens at a
  safepoint on the VM thread; the periodic evaluation only does a lightweight
  should_attempt_uncommit() pre-check.
- Fix the STS + Heap_lock deadlock by moving the resize evaluation into
  VM_G1ShrinkHeap::doit_prologue(), which already holds Heap_lock via
  VM_GC_Operation, instead of taking Heap_lock from the service thread in STS.
- Replace the gc_cause() assert in the shrink path with
  assert_at_safepoint_on_vm_thread(): this operation uncommits free regions, it
  is not a GC.
- Re-align the time-based shrink amount after the MinHeapSize clamp, and stop
  asserting region alignment on the normal GC shrink path.
- Align time-based uncommit with GC sizing using the MaxHeapFreeRatio floor.
- Drop the unused post-GC baseline timestamp: reset_free_region_timestamps() is
  never called in this backport, so should_uncommit_region() keys purely off each
  region's last access time. Removes the dead _last_gc_timestamp member, its
  getter, and the always-zero read.
- Adapt the safety fixes to the JDK 25u G1 APIs.
- Log the start of each uncommit evaluation.

Tests:
- Rework the JTReg coverage into real assertions. TestTimeBasedHeapConfig asserts
  flag range/constraint rejection and acceptance. TestG1RegionUncommit is a
  fastdebug regression for the free-list/safepoint race: it runs a concurrent
  allocation phase, then an idle phase that deterministically uncommits (GC-based
  shrink disabled via MaxHeapFreeRatio=100 so the uncommit is at