@@ -26,161 +26,56 @@ package gc.g1;
 /**
  * @test TestTimeBasedHeapConfig
  * @bug 8357445
- * @summary Test configuration settings and error conditions for time-based heap sizing
+ * @summary Validate flag parsing and constraints for time-based G1 heap uncommit.
  * @requires vm.gc.G1
  * @library /test/lib
- * @modules java.base/jdk.internal.misc
- *          java.management/sun.management
- * @run main/othervm -XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions
- *     -Xms16m -Xmx64m -XX:G1HeapRegionSize=1M
- *     -XX:G1TimeBasedEvaluationIntervalMillis=5000
- *     -XX:G1UncommitDelayMillis=10000
- *     -XX:G1MinRegionsToUncommit=2
- *     -Xlog:gc*,gc+sizing*=debug
- *     gc.g1.TestTimeBasedHeapConfig
+ * @run main gc.g1.TestTimeBasedHeapConfig
  */
 
-import java.util.*;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
 public class TestTimeBasedHeapConfig {
 
     public static void main(String[] args) throws Exception {
-        testConfigurationParameters();
-        testBoundaryValues();
-        testEdgeCaseConfigurations();
-    }
+        // Interval must be a multiple of PeriodicTask::interval_gran (10).
+        expectRejected(
+            new String[] {"-XX:+UseG1GC", "-XX:G1TimeBasedEvaluationIntervalMillis=1005", "-version"},
+            "must be evenly divisible by PeriodicTask::interval_gran");
 
-    static void testConfigurationParameters() throws Exception {
-        // Test default settings
-        verifyVMConfig(new String[] {
-            "-XX:+UseG1GC",
-            "-XX:+UnlockDiagnosticVMOptions",
-            "-Xms16m", "-Xmx64m",
-            "-XX:G1HeapRegionSize=1M",
-            "-Xlog:gc*,gc+sizing*=debug",
-            "gc.g1.TestTimeBasedHeapConfig$BasicTest"
-        });
-    }
+        // Interval below the allowed minimum (1000).
+        expectRejected(
+            new String[] {"-XX:+UseG1GC", "-XX:G1TimeBasedEvaluationIntervalMillis=500", "-version"},
+            "G1TimeBasedEvaluationIntervalMillis");
 
-    private static void verifyVMConfig(String[] opts) throws Exception {
-        ProcessBuilder pb = ProcessTools.createTestJavaProcessBuilder(opts);
-        OutputAnalyzer output = new OutputAnalyzer(pb.start());
-        output.shouldHaveExitValue(0);
-    }
+        // Uncommit delay below the allowed minimum (1000).
+        expectRejected(
+            new String[] {"-XX:+UseG1GC", "-XX:G1UncommitDelayMillis=500", "-version"},
+            "G1UncommitDelayMillis");
 
-    public static class BasicTest {
-        private static final int MB = 1024 * 1024;
-        private static ArrayList<byte[]> arrays = new ArrayList<>();
+        // Minimum-regions below the allowed minimum (1); diagnostic flag.
+        expectRejected(
+            new String[] {"-XX:+UseG1GC", "-XX:+UnlockDiagnosticVMOptions",
+                          "-XX:G1MinRegionsToUncommit=0", "-version"},
+            "G1MinRegionsToUncommit");
 
-        public static void main(String[] args) throws Exception {
-            // Initial allocation
-            allocateMemory(8); // 8MB
-            System.gc();
-            Thread.sleep(1000);
-
-            // Clean up
-            arrays.clear();
-            System.gc();
-            Thread.sleep(2000);
-
-            System.out.println("Basic configuration test completed successfully");
-            Runtime.getRuntime().halt(0);
-        }
-
-        static void allocateMemory(int mb) throws InterruptedException {
-            for (int i = 0; i < mb; i++) {
-                arrays.add(new byte[MB]);
-                if (i % 2 == 0) Thread.sleep(10);
-            }
-        }
-    }
-
-    static void testBoundaryValues() throws Exception {
-        // Test minimum values
-        verifyVMConfig(new String[] {
-            "-XX:+UseG1GC",
-            "-XX:+UnlockDiagnosticVMOptions",
-            "-Xms8m", "-Xmx32m",
-            "-XX:G1HeapRegionSize=1M",
-            "-XX:G1TimeBasedEvaluationIntervalMillis=1000", // 1 second minimum
-            "-XX:G1UncommitDelayMillis=1000", // 1 second minimum
-            "-XX:G1MinRegionsToUncommit=1", // 1 region minimum
-            "-Xlog:gc*,gc+sizing*=debug",
-            "gc.g1.TestTimeBasedHeapConfig$BoundaryTest"
-        });
-
-        // Test maximum reasonable values
-        verifyVMConfig(new String[] {
-            "-XX:+UseG1GC",
-            "-XX:+UnlockDiagnosticVMOptions",
-            "-Xms32m", "-Xmx256m",
-            "-XX:G1HeapRegionSize=1M",
-            "-XX:G1TimeBasedEvaluationIntervalMillis=300000", // 5 minutes
-            "-XX:G1UncommitDelayMillis=300000", // 5 minutes
-            "-XX:G1MinRegionsToUncommit=50", // 50 regions
-            "-Xlog:gc*,gc+sizing*=debug",
-            "gc.g1.TestTimeBasedHeapConfig$BoundaryTest"
-        });
-    }
-
-    static void testEdgeCaseConfigurations() throws Exception {
-        // Test with very small heap (should still work)
-        verifyVMConfig(new String[] {
-            "-XX:+UseG1GC",
-            "-XX:+UnlockDiagnosticVMOptions",
-            "-Xms4m", "-Xmx8m", // Very small heap
-            "-XX:G1HeapRegionSize=1M",
+        // A valid configuration must start normally.
+        OutputAnalyzer ok = run(new String[] {
+            "-XX:+UseG1GC", "-XX:+UnlockDiagnosticVMOptions",
             "-XX:G1TimeBasedEvaluationIntervalMillis=2000",
-            "-XX:G1UncommitDelayMillis=3000",
+            "-XX:G1UncommitDelayMillis=2000",
             "-XX:G1MinRegionsToUncommit=1",
-            "-Xlog:gc*,gc+sizing*=debug",
-            "gc.g1.TestTimeBasedHeapConfig$SmallHeapTest"
-        });
+            "-version"});
+        ok.shouldHaveExitValue(0);
     }
 
-    public static class BoundaryTest {
-        private static final int MB = 1024 * 1024;
-        private static ArrayList<byte[]> arrays = new ArrayList<>();
-
-        public static void main(String[] args) throws Exception {
-            System.out.println("BoundaryTest: Starting");
-
-            // Test with boundary conditions
-            allocateMemory(4); // 4MB
-            Thread.sleep(2000);
-
-            arrays.clear();
-            System.gc();
-            Thread.sleep(5000); // Wait for evaluation
-
-            System.out.println("BoundaryTest: Completed");
-            Runtime.getRuntime().halt(0);
-        }
-
-        static void allocateMemory(int mb) throws InterruptedException {
-            for (int i = 0; i < mb; i++) {
-                arrays.add(new byte[MB]);
-                Thread.sleep(10);
-            }
-        }
+    private static OutputAnalyzer run(String[] opts) throws Exception {
+        return new OutputAnalyzer(ProcessTools.createLimitedTestJavaProcessBuilder(opts).start());
     }
 
-    public static class SmallHeapTest {
-        public static void main(String[] args) throws Exception {
-            System.out.println("SmallHeapTest: Starting with very small heap");
-
-            // With 4-8MB heap, just allocate a small amount
-            byte[] smallAlloc = new byte[1024 * 1024]; // 1MB
-            Thread.sleep(2000);
-
-            smallAlloc = null;
-            System.gc();
-            Thread.sleep(5000);
-
-            System.out.println("SmallHeapTest: Completed");
-            Runtime.getRuntime().halt(0);
-        }
+    private static void expectRejected(String[] opts, String expectedMessage) throws Exception {
+        OutputAnalyzer o = run(opts);
+        o.shouldContain(expectedMessage);
+        o.shouldNotHaveExitValue(0);
     }
 }
